--- a/Code-along/CompanyDemo.Presentation/MainWindow.xaml
+++ b/Code-along/CompanyDemo.Presentation/MainWindow.xaml
@@ -4,9 +4,28 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CompanyDemo.Presentation"
+        xmlns:UI="clr-namespace:CompanyDemo.Presentation.ViewModels"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance Type=UI:MainWindowViewModel, IsDesignTimeCreatable=True}"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
+        <StackPanel Grid.Row="0"                    
+                    Orientation="Horizontal">
+            <ComboBox Width="200"
+                      Margin="10"
+                      VerticalAlignment="Center"
+                      ItemsSource="{Binding Regions}"
+                      SelectedItem="{Binding SelectedRegion}"/>
+        </StackPanel>
+
+        <DataGrid Grid.Row="1"
+                  ItemsSource="{Binding Orders}">
+            
+        </DataGrid>
     </Grid>
 </Window>
